// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> matches snapshot with default props 1`] = `
<div
  className="box marginEnd0 marginStart0"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="box itemsCenter xsDirectionRow xsDisplayFlex"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={true}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 40,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 white alignLeft noWrap fontWeightBold"
            >
              News
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={false}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 40,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 darkGray alignLeft noWrap fontWeightBold"
            >
              You
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with dot indicators 1`] = `
<div
  className="box marginEnd0 marginStart0"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="box itemsCenter xsDirectionRow xsDisplayFlex"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={true}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 40,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 white alignLeft noWrap fontWeightBold"
            >
              News
            </div>
            <div
              className="box circle marginStart2 redBg"
              style={
                Object {
                  "height": 6,
                  "marginTop": "1px",
                  "width": 6,
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={false}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 40,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 darkGray alignLeft noWrap fontWeightBold"
            >
              You
            </div>
            <div
              className="box circle marginStart2 redBg"
              style={
                Object {
                  "height": 6,
                  "marginTop": "1px",
                  "width": 6,
                }
              }
            />
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Tabs /> matches snapshot with lg size and wrap 1`] = `
<div
  className="box marginEnd0 marginStart0"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="box flexWrap itemsCenter xsDirectionRow xsDisplayFlex"
    style={
      Object {
        "height": undefined,
        "width": undefined,
      }
    }
  >
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={true}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box darkGrayBg itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 48,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 white alignLeft noWrap fontWeightBold"
            >
              News
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="box"
    >
      <div
        className="box"
      >
        <a
          aria-selected={false}
          className="link tapTransition block pill accessibilityOutline"
          href="#"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyPress={[Function]}
          onMouseDown={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          rel=""
          role="tab"
          target={null}
        >
          <div
            className="box itemsCenter justifyCenter paddingX4 paddingY2 pill userSelectNone whiteBg xsDisplayFlex"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "height": 48,
                "minWidth": 60,
              }
            }
          >
            <div
              className="Text fontSize3 darkGray alignLeft noWrap fontWeightBold"
            >
              You
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
